# capscr-plugins

./: .gitignore  Cargo.toml  LICENSE  README.md  registry.json
borders/: Cargo.toml  README.md  plugin.toml
borders/src/: lib.rs
capture-logger/: plugin.toml
copy-file-path/: plugin.toml
desktop-toast/: plugin.toml
downscale/: Cargo.toml  README.md  plugin.toml
downscale/src/: lib.rs
grayscale/: plugin.toml
hotbar/: Cargo.toml  README.md  plugin.toml
hotbar/src/: lib.rs
scripts/: build-zips.mjs
sounds/: Cargo.toml  README.md  plugin.toml
sounds/src/: lib.rs
webhook-notify/: plugin.toml
