[package]
name = "capscr-hotbar"
version = "0.1.0"
edition = "2021"
description = "Transparent hotbar overlay plugin for capscr"
license = "MIT"
publish = false

[lib]
crate-type = ["lib"]

[features]
runtime = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

# v0.4: re-enable when the capscr plugin runtime ships
# capscr = { path = "../../capscr", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
] }
